test-app/deploy/svc.yaml
kind: Service
apiVersion: v1
metadata:
  name:  node-app-svc
spec:
  selector:
    app:  node-app
  type: NodePort
  ports:
  - name:  http
    port:  80
    targetPort:  80
